--- a/latex/refs.bib
+++ b/latex/refs.bib
@@ -26,7 +26,7 @@
     author = "Szabó, Barna and Babu{\v s}ka, Ivo",
     title = "Introduction to Finite Element Analysis:
              Formulation, Verification and Validation",
-    publisher = "John Wiley \& Sons, Ltd",
+    publisher = "John Wiley \& Sons",
     year = "2011",
     edition = "1."
 }
@@ -89,4 +89,252 @@
     title = "A posteriori error estimates for elliptic problems with {Dirac} delta source terms",
     volume = "105",
     year = "2006"
+}
+
+@book{grisvard2011,
+    author = "Grisvard, Pierre",
+    title = "Elliptic Problems in Nonsmooth Domains",
+    publisher = "Society for Industrial and Applied Mathematics",
+    year = "2011"
+}
+
+@book{necas2011,
+    author = "Ne{\v c}as, Jind{\v r}ich",
+    title = "Direct Methods in the Theory of Elliptic Equations",
+    publisher = "Springer Berlin Heidelberg",
+    year = "2011",
+    series = "Springer Monographs in Mathematics",
+    edition = "1.",
+    note = "Originally published in French ``Les méthodes directes en théorie des équations elliptiques'' by Academia, Praha, and Masson et Cie, Editeurs, Paris, 1967"
+}
+
+@book{schwab1998,
+    author = "Schwab, Christoph",
+    title = "$p$- and $hp$- Finite Element Methods: Theory and Applications in Solid and Fluid Mechanics",
+    publisher = "Clarendon Press",
+    year = "1998",
+    series = "Numerical Mathematics and Scientific Computation"
+}
+
+@book{rudin1986,
+    author = "Rudin, Walter",
+    title = "Real and Complex Analysis",
+    publisher = "McGraw Hill",
+    year = "1986",
+    edition = "3.",
+    series = "McGraw-Hill Series in Higher Mathematics"
+}
+
+@book{rudin1991,
+    author = "Rudin, Walter",
+    title = "Functional Analysis",
+    publisher = "McGraw Hill",
+    year = "1991",
+    edition = "2.",
+    series = "International Series in Pure and Applied Mathematics"
+}
+
+@book{folland1999,
+    author = "Folland, Gerald B.",
+    title = "Real Analysis: Modern Techniques and Their Applications",
+    publisher = "John Wiley \& Sons",
+    year = "1999",
+    edition = "2.",
+    series = "Pure and Applied Mathematics: A Wiley Series of Texts, Monographs and Tracts"
+}
+
+@book{adams2003,
+    author = "Adams, Robert A. and Fournier, John J. F.",
+    title = "Sobolev Spaces",
+    publisher = "Academic Press",
+    year = "2003",
+    volume = "140",
+    edition = "2.",
+    series = "Pure and Applied Mathematics Series"
+}
+
+@book{ciarlet2002,
+    author = "Ciarlet, Philippe G.",
+    title = "The Finite Element Method for Elliptic Problems",
+    publisher = "Society for Industrial and Applied Mathematics",
+    year = "2002",
+    volume = "40",
+    series = "Classics in Applied Mathematics"
+}
+
+@book{braess2007,
+    author = "Braess, Dietrich",
+    title = "Finite Elements: Theory, Fast Solvers, and Applications in Solid Mechanics",
+    publisher = "Cambridge University Press",
+    year = "2007",
+    edition = "3."
+}
+
+@incollection{grisvard1976,
+    title = "Behavior of the {Solutions} of an {Elliptic} {Boundary} {Value} {Problem} in a {Polygonal} or {Polyhedral} {Domain}",
+    editor = "Bert Hubbard",
+    booktitle = "Numerical Solution of Partial Differential Equations–III",
+    publisher = "Academic Press",
+    pages = "207-274",
+    year = "1976",
+    author = "Grisvard, Pierre"
+}
+
+@book{lions1972,
+    author = "Lions, J. L. and Magenes, E.",
+    title = "Non-Homogeneous Boundary Value Problems and Applications",
+    publisher = "Springer Berlin Heidelberg",
+    year = "1972",
+    volume = "1",
+    edition = "1.",
+    series = "Grundlehren der mathematischen Wissenschaften"
+}
+
+@book{scottbrenner2007,
+    author = "Brenner, Susanne C. and Scott, L. Ridgway",
+    title = "The Mathematical Theory of Finite Element Methods",
+    publisher = "Springer New York",
+    year = "2007",
+    edition = "3.",
+    series = "Texts in Applied Mathematics"
+}
+
+@book{mazya2011,
+    author = "Maz'ya, Vladimir",
+    title = "Sobolev Spaces: with Applications to Elliptic Partial Differential
+    Equations",
+    publisher = "Springer",
+    year = "2011",
+    volume = "342",
+    edition = "2.",
+    series = "Grundlehren der mathematischen Wissenschaften"
+}
+
+@article{babuskaszabokatz1981,
+    author = "Babu{\v s}ka, I. and Szabo, B. A. and Katz, I. N.",
+    title = "The $p$-{Version} of the {Finite} {Element} {Method}",
+    journal = "SIAM Journal on Numerical Analysis",
+    volume = "18",
+    number = "3",
+    pages = "515-545",
+    year = "1981",
+    doi = "10.1137/0718033"
+}
+
+@article{dorr1984,
+    author = "Milo R. Dorr",
+    journal = "SIAM Journal on Numerical Analysis",
+    number = "6",
+    pages = "1180-1207",
+    publisher = "Society for Industrial and Applied Mathematics",
+    title = "The {Approximation} {Theory} for the $p$-{Version} of the {Finite} {Element} {Method}",
+    volume = "21",
+    year = "1984"
+}
+
+@article{babuskasuri1987,
+    author = "Babu{\v s}ka, I. and Suri, Manil",
+    title = "The {Optimal} {Convergence} {Rate} of the $p$-{Version} of the {Finite} {Element} {Method}",
+    journal = "SIAM Journal on Numerical Analysis",
+    volume = "24",
+    number = "4",
+    pages = "750-776",
+    year = "1987",
+    doi = "10.1137/0724049"
+}
+
+@incollection{szabo2004,
+    author = "Szabó, Barna and Düster, Alexander and Rank, Ernst",
+    publisher = "John Wiley \& Sons, Ltd",
+    isbn = "9780470091357",
+    title = "The $p$-version of the {Finite} {Element} {Method}",
+    booktitle = "Encyclopedia of Computational Mechanics",
+    chapter = "5",
+    doi = "https://doi.org/10.1002/0470091355.ecm003g",
+    year = "2004"
+}
+
+@article{babuskadorr1981,
+    author = "Babu{\v s}ka, I. and Dorr, M. R.",
+    journal = "Numerische Mathematik",
+    pages = "257-278",
+    title = "Error {Estimates} for the {Combined} $h$ and $p$ {Versions} of the {Finite} {Element} {Method}",
+    volume = "37",
+    year = "1981",
+}
+
+@article{guo1986,
+    author = "Guo, B and Babu{\v s}ka, I.",
+    journal = "Computational Mechanics",
+    pages = "21-41",
+    title = "The $h$-$p$ version of the finite element method",
+    volume = "1",
+    year = "1986",
+}
+
+@article{babuskasuri1987hp,
+    author = "Babu{\v s}ka, I. and Suri, Manil",
+    title = "The $h-p$ version of the finite element method with quasiuniform meshes",
+    journal = "M2AN - Mod\'elisation math\'ematique et analyse num\'erique",
+    pages = "199--238",
+    publisher = "AFCET - Gauthier-Villars",
+    address = "Paris",
+    volume = "21",
+    number = "2",
+    year = "1987"
+}
+
+@article{babuskasuri1994,
+    author = "Babu{\v s}ka, I. and Suri, Manil",
+    journal = "SIAM Review",
+    number = "4",
+    pages = "578--632",
+    publisher = "Society for Industrial and Applied Mathematics",
+    title = "The {P} and {H-P} {Versions} of the {Finite} {Element} {Method}, {Basic} {Principles} and {Properties}",
+    volume = "36",
+    year = "1994"
+}
+
+@book{strang1973,
+    author = "Strang, G. and G. J. Fix",
+    title = "An Analysis of the Finite Element Method",
+    publisher = "Prentice-Hall",
+    year = "1973",
+    series = "Prentice-Hall Series in Automatic Computation"
+}
+
+@article{cea1964,
+    author = "Céa, Jean",
+    journal = "Annales de l'Institut Fourier",
+    number = "2",
+    pages = "345-444",
+    title = "Approximation variationnelle des problèmes aux limites",
+    volume = "14",
+    year = "1964"
+}
+
+@book{andrews1998,
+    author = "Andrews, Larry C.",
+    title = "Special Functions of Mathematics for Engineers",
+    publisher = "SPIE Press",
+    year = "1998",
+    edition = "2."
+}
+
+@book{stein1970,
+    author = "Stein, Elias M.",
+    publisher = "Princeton University Press",
+    title = "Singular Integrals and Differentiability Properties of Functions",
+    year = "1970"
+}
+
+@article{boillat1997,
+    author = "Boillat, E.",
+    title = "On a {Right}-{Inverse} for the {Divergence} {Operator} in {Spaces} of {Continuous} {Piecewise} {Polynomials}",
+    journal = "Mathematical Models and Methods in Applied Sciences",
+    pages = "487-505",
+    publisher = "World Scientific",
+    volume = "7",
+    number = "4",
+    year = "1997"
 }
