--- a/latex/refs.bib
+++ b/latex/refs.bib
@@ -338,3 +338,60 @@
     number = "4",
     year = "1997"
 }
+
+@article{wang2020,
+    title = "A regularization approach for solving {Poisson}’s equation with singular charge sources and diffuse interfaces",
+    journal = "Applied Mathematics Letters",
+    volume = "102",
+    pages = "106144",
+    year = "2020",
+    issn = "0893-9659",
+    doi = "https://doi.org/10.1016/j.aml.2019.106144",
+    url = "https://www.sciencedirect.com/science/article/pii/S0893965919304689",
+    author = "Siwen Wang and Arum Lee and Emil Alexov and Shan Zhao",
+}
+
+@article{Hussain2012AppropriateGQ,
+  title={Appropriate {Gaussian} quadrature formulae for triangles},
+  author={Farzana Hussain and M. S. Karim and Razwan Ahamad},
+  journal={International Journal of Applied Mathematics and Computation},
+  year={2012},
+  volume={4},
+  pages={23-38},
+  url={https://api.semanticscholar.org/CorpusID:55268524}
+}
+
+@article{islam2009,
+    author = {Islam, Md and Hossain, M. Alamgir},
+    year = {2009},
+    month = {April},
+    pages = {515-524},
+    title = {Numerical integrations over an arbitrary quadrilateral region},
+    volume = {210},
+    journal = {Applied Mathematics and Computation},
+    doi = {10.1016/j.amc.2009.01.030}
+}
+
+@article{guibabuska1986,
+    author = "Gui, W. and Babu{\v s}ka, I.",
+    title = "The $h$, $p$ and $hp$ {Versions} of the {Finite} {Element} {Method} in {One} {Dimension}. {Part} 1: {The} {Error} {Analysis} of the $p$-{Version}. {Part} 2: {The} {Error} {Analysis} of the $h$- and $hp$-{Versions}. {Part} 3: {The} {Adaptive} $hp$-{Versions}",
+    journal = "Numerische Mathematik",
+    year = "1986",
+    volume = "49",
+    pages = "577-683"
+}
+
+@misc{gmp,
+    title = {The {GNU} {MP} {Bignum} {Library}},
+    note = {[Online]. \url{https://gmplib.org/} (accessed 19 March 2024)}
+}
+
+@misc{eigen,
+    title = {Eigen},
+    note = {[Online]. \url{https://eigen.tuxfamily.org/} (accessed 19 March 2024)}
+}
+
+@misc{gsl,
+    title = {{GSL} - {GNU} {Scientific} {Library}},
+    note = {[Online]. \url{https://www.gnu.org/software/gsl/} (accessed 19 March 2024)}
+}
